fix game scroll on mobiles

--- a/src/client/styles.css
+++ b/src/client/styles.css
@@ -32,12 +32,13 @@ html, body {
   height: 100%;
   margin: auto;
   padding: 16px;
+  overflow-y: auto;
 }
 
 .role-selection-screen {
   margin: auto;
   width: 70%;
-  height: 90%;
+  min-height: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
